src/main/java/com/example/Demo/errors/exception/EmptyFieldException.java
package com.example.Demo.errors.exception;

public class EmptyFieldException extends RuntimeException {
    public EmptyFieldException(String message) {
        super(message);
    }
}
